--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/lms
+spring.datasource.url=jdbc:mysql://localhost:3306/tkbeat
 spring.datasource.username=root
 spring.datasource.password=123456
 #spring.jpa.hibernate.ddl-auto=validate
